<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_activity_detail_titel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Titel van het element"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_activity_detail_geografische_ligging"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Geografische Ligging"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_detail_titel" />

    <ImageView
        android:id="@+id/iv_activity_detail_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_detail_geografische_ligging" />

    <TextView
        android:id="@+id/tv_activity_detail_kunstenaar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/kunstenaar"
        app:layout_constraintBottom_toBottomOf="@+id/tv_activity_detail_kunstenaar_invoer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_activity_detail_kunstenaar_invoer" />

    <TextView
        android:id="@+id/tv_activity_detail_kunstenaar_invoer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Naam van de kunstenaar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_activity_detail_kunstenaar"
        app:layout_constraintTop_toBottomOf="@+id/iv_activity_detail_image" />

    <TextView
        android:id="@+id/tv_activity_detail_beschrijving"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/beschrijving"
        app:layout_constraintBottom_toBottomOf="@+id/tv_activity_detail_beschrijving_invoer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_detail_kunstenaar_invoer" />

    <TextView
        android:id="@+id/tv_activity_detail_beschrijving_invoer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Beschrijving van het object"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_activity_detail_kunstenaar_invoer"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_detail_kunstenaar_invoer" />

    <TextView
        android:id="@+id/tv_activity_detail_materiaal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/materiaal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_activity_detail_materiaal_invoer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_detail_beschrijving_invoer" />

    <TextView
        android:id="@+id/tv_activity_detail_materiaal_invoer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Beschrijving van het materiaal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_activity_detail_beschrijving_invoer"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_detail_beschrijving_invoer" />

    <TextView
        android:id="@+id/tv_activity_detail_ondergrond"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/ondergrond"
        app:layout_constraintBottom_toBottomOf="@+id/tv_activity_detail_ondergrond_invoer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_activity_detail_ondergrond_invoer" />

    <TextView
        android:id="@+id/tv_activity_detail_ondergrond_invoer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Beschrijving van het ondergrond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_activity_detail_materiaal_invoer"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_detail_materiaal_invoer" />

    <TextView
        android:id="@+id/tv_activity_detail_plaatsingsdatum"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/plaatsingsdatum"
        app:layout_constraintBottom_toBottomOf="@+id/tv_activity_detail_plaatsingsdatum_invoer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_activity_detail_plaatsingsdatum_invoer" />

    <TextView
        android:id="@+id/tv_activity_detail_plaatsingsdatum_invoer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="datum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_activity_detail_plaatsingsdatum"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_detail_ondergrond_invoer" />



</androidx.constraintlayout.widget.ConstraintLayout>